tests/baselines/reference/privateNameInObjectLiteral.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral.ts(2,5): error TS18010: Private names are not allowed outside class bodies.


==== tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral.ts (1 errors) ====
    const obj = {
        #foo: "#foo",
        ~~~~
!!! error TS18010: Private names are not allowed outside class bodies.
        #bar: () => true,
        #baz() {
            return true;
        }
    };
    